fixed extra whitespace on bottom of settings page.

--- a/client/stylesheets/accountSettingsStyles/accountSettingsPageStyles.css
+++ b/client/stylesheets/accountSettingsStyles/accountSettingsPageStyles.css
@@ -13,8 +13,7 @@
 }
 
 .accountContainer{
-	height: 100%;
-	overflow: hidden;
+	height: 101%;
 	background-color: #A200FF;
 }
 
